tests/ui/closures/iterating-captured-hashmap-makes-closure-fnonce.stderr
error[E0382]: use of moved value: `debug_dump_dict`
  --> $DIR/iterating-captured-hashmap-makes-closure-fnonce.rs:16:5
   |
LL |     debug_dump_dict();
   |     ----------------- `debug_dump_dict` moved due to this call
LL |     debug_dump_dict();
   |     ^^^^^^^^^^^^^^^ value used here after move
   |
note: closure cannot be invoked more than once because it moves the variable `dict` out of its environment
  --> $DIR/iterating-captured-hashmap-makes-closure-fnonce.rs:11:29
   |
LL |         for (key, value) in dict {
   |                             ^^^^
note: this value implements `FnOnce`, which causes it to be moved when called
  --> $DIR/iterating-captured-hashmap-makes-closure-fnonce.rs:15:5
   |
LL |     debug_dump_dict();
   |     ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0382`.
